style.css
body
{
	font-family: arial;
}


#title
{
	/*font-weight: bold;*/
	text-align: center;
	margin: 50px auto;
}

#title h1
{
	font-size: 3rem;
	color: #222;
	margin: 10px;
}
#title h2
{
	font-size: 1.3rem;
	color: #666;
	margin: 10px;
}


#gridcontainer
{
	margin: auto;
	width: 1610px;
	height: 1038px;
	padding: 0px 30px;
}

#grid
{
	/*margin: 30px auto;*/
	width: 100%;
	height: 100%;
	background-color: #ccc;

	display: grid;
	grid-auto-flow: column;
	grid-template-columns: repeat(32, 50px);
	grid-template-rows: repeat(20, 50px);
	grid-gap: 2px;
	padding: 2px;

	justify-items: center;
	align-items: center;
}

.centered
{
	width: 200px;
	margin: auto;
	margin-bottom: 50px;
}

#settings
{
	width: 320px;
	margin: auto;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: : repeat(2, 1fr);
	justify-items: left;
	/*display: flex;*/
	/*align-content: center;*/
	/*justify-content: space-between;*/
}

#settings label
{
	text-align: left;
}

#settings input
{
	width: 80px;
}

.centered button
{
	margin: auto;
}


.button_update
{
	display: inline-block;
}



.n5
{
	color: #305b1f;
}

.n4
{
	color: #2f5da8;
}

.n3
{
	/*color: #840707;*/
	color: #232323;
}

.cell
{
	display: flex;
	justify-content: center;
	align-items: center;
	margin: auto;

	font-size: 1.6rem;
	background-color: #eee;
	/*border-top: 2px #ccc solid;
	/*border-left: 2px #ccc solid;*/
	/*box-sizing: border-box;*/

	width: 50px;
	height: 50px;
}

.cell:hover
{
	background-color: rgb(250,250,250);
	cursor: default;
}
/*
.cell:active
{
	background-color: #ddd;
	cursor: default; // or pointer
}
*/

#randoms
{
	display: grid;
	grid-template-columns: 200px 400px 1000px;
	width: 1600px;
	height: 100px;
	margin: 80px auto;
}

#randoms button
{
	margin: auto;
}

.random_bg
{
	margin: auto;
	width: 50px;
	height: 50px;
	padding: 2px;
	background-color: #ccc;
	cursor: default;
}

#vocabulary
{
	font-size: 1.2rem;
	width: 1710px;
	height: 8950px;
	margin: 50px auto;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;

	grid-template-columns: repeat(3, 1fr);
	/*grid-template-columns: repeat(3, 1fr);*/
	/*grid-template-rows: repeat(223, 1fr);*/
	/*grid-auto-flow: column;*/

	justify-content: flex-start;
	/*justify-content: space-between;*/
	justify-items: center;
}

.wordbox
{
	width: 400px;
	padding: 5px 15px;
	display: grid;
	grid-template-columns: 110px 90px 200px; /* 1fr 1fr 2fr doesn't work on iOS Safari */
	border: 1px solid #ddd;
	border-left: 2px solid #ddd;
	border-right: 2px solid #ddd;
}

.wordbox:nth-child(odd)
{
	background: rgb(235,235,235);
}

#tooltip
{
	position: absolute;
	display: none;
	z-index: 10;

	font-size: 1.2rem;
	color: white;
	background: #333;
	opacity: 0.95;

	width: 240px;
	min-height: 100px;
	top: 500px;
	left: 500px;
	padding: 10px;
}



/*
#testgrid
{
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: repeat(4, 1fr);

	width: 100px;
	grid-auto-flow: column;

	justify-items: center;
	align-items: center;
}
*/

/*
.testbox
{
	width: 300px;
	height: 20px;
	padding: 10px;
	margin: 10px;
	background: teal;
}
*/

